load command done + started save command